// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin captures worklets environment 1`] = `
"var x = 5;
var objX = {
  x: x
};
var _worklet_5359970077727_init_data = {
  code: \\"function f(){const{x,objX}=this._closure;return{res:x+objX.x};}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var f = function () {
  var _e = [new Error(), -3, -20];

  var _f = function _f() {
    return {
      res: x + objX.x
    };
  };

  _f._closure = {
    x: x,
    objX: {
      x: objX.x
    }
  };
  _f.__initData = _worklet_5359970077727_init_data;
  _f.__workletHash = 5359970077727;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin doesn't capture globals 1`] = `
"var _worklet_13298016111221_init_data = {
  code: \\"function f(){console.log('test');}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var f = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f() {
    console.log('test');
  };

  _f._closure = {};
  _f.__initData = _worklet_13298016111221_init_data;
  _f.__workletHash = 13298016111221;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin doesn't transform standard callback functions 1`] = `
"var foo = Something.Tap().onEnd(function (_event, _success) {
  console.log('onEnd');
});"
`;

exports[`babel plugin doesn't transform string literals 1`] = `
"var _worklet_7442778059540_init_data = {
  code: \\"function foo(x){var bar='worklet';var baz=\\\\\\"worklet\\\\\\";}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(x) {
    var bar = 'worklet';
    var baz = \\"worklet\\";
  };

  _f._closure = {};
  _f.__initData = _worklet_7442778059540_init_data;
  _f.__workletHash = 7442778059540;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin supports SequenceExpression 1`] = `
"function App() {
  (0, fun)({
    onStart: function onStart() {}
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, many arguments 1`] = `
"var _worklet_4434179069699_init_data = {
  code: \\"function onStart(){}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

function App() {
  (0, 3, fun)({
    onStart: function () {
      var _e = [new Error(), 1, -20];

      var _f = function _f() {};

      _f._closure = {};
      _f.__initData = _worklet_4434179069699_init_data;
      _f.__workletHash = 4434179069699;
      _f.__stackDetails = _e;
      return _f;
    }()
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, with objectHook 1`] = `
"var _worklet_4434179069699_init_data = {
  code: \\"function onStart(){}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

function App() {
  (0, useAnimatedGestureHandler)({
    onStart: function () {
      const _e = [new Error(), 1, -20];

      const _f = function () {};

      _f._closure = {};
      _f.__initData = _worklet_4434179069699_init_data;
      _f.__workletHash = 4434179069699;
      _f.__stackDetails = _e;
      return _f;
    }()
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, with worklet 1`] = `
"var _worklet_4434179069699_init_data = {
  code: \\"function onStart(){}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

function App() {
  (0, fun)({
    onStart: function () {
      var _e = [new Error(), 1, -20];

      var _f = function _f() {};

      _f._closure = {};
      _f.__initData = _worklet_4434179069699_init_data;
      _f.__workletHash = 4434179069699;
      _f.__stackDetails = _e;
      return _f;
    }()
  }, []);
}"
`;

exports[`babel plugin supports SequenceExpression, with worklet closure 1`] = `
"var _worklet_5237526540557_init_data = {
  code: \\"function onStart(){const{obj}=this._closure;var a=obj.a;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

function App() {
  var obj = {
    a: 1,
    b: 2
  };
  (0, fun)({
    onStart: function () {
      var _e = [new Error(), -2, -20];

      var _f = function _f() {
        var a = obj.a;
      };

      _f._closure = {
        obj: {
          a: obj.a
        }
      };
      _f.__initData = _worklet_5237526540557_init_data;
      _f.__workletHash = 5237526540557;
      _f.__stackDetails = _e;
      return _f;
    }()
  }, []);
}"
`;

exports[`babel plugin supports recursive calls 1`] = `
"var a = 1;
var _worklet_2022702330805_init_data = {
  code: \\"function foo(t){const foo=this._recur;const{a}=this._closure;if(t>0){return a+foo(t-1);}}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), -2, -20];

  var _f = function _f(t) {
    if (t > 0) {
      return a + foo(t - 1);
    }
  };

  _f._closure = {
    a: a
  };
  _f.__initData = _worklet_2022702330805_init_data;
  _f.__workletHash = 2022702330805;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms 1`] = `
"var _reactNativeReanimated = _interopRequireWildcard(require(\\"react-native-reanimated\\"));

function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== \\"function\\") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function _getRequireWildcardCache(nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }

function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== \\"default\\" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

var _worklet_16669311443114_init_data = {
  code: \\"function anonymous(){const{offset}=this._closure;return{transform:[{translateX:offset.value*255}]};}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

function Box() {
  var offset = (0, _reactNativeReanimated.useSharedValue)(0);
  var animatedStyles = (0, _reactNativeReanimated.useAnimatedStyle)(function () {
    const _e = [new Error(), -2, -20];

    const _f = function () {
      return {
        transform: [{
          translateX: offset.value * 255
        }]
      };
    };

    _f._closure = {
      offset
    };
    _f.__initData = _worklet_16669311443114_init_data;
    _f.__workletHash = 16669311443114;
    _f.__stackDetails = _e;
    return _f;
  }());
  return React.createElement(React.Fragment, null, React.createElement(_reactNativeReanimated.default.View, {
    style: [styles.box, animatedStyles]
  }), React.createElement(Button, {
    onPress: function onPress() {
      return offset.value = Math.random();
    },
    title: \\"Move\\"
  }));
}"
`;

exports[`babel plugin transforms nested functions correctly 1`] = `
"var x = 5;
var _worklet_1646817029123_init_data = {
  code: \\"function f(){const{x}=this._closure;function inner(){return x;}return inner();}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var f = function () {
  var _e = [new Error(), -2, -20];

  var _f = function _f() {
    function inner() {
      return x;
    }

    return inner();
  };

  _f._closure = {
    x: x
  };
  _f.__initData = _worklet_1646817029123_init_data;
  _f.__workletHash = 1646817029123;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for arrays 1`] = `
"var _worklet_8509370056349_init_data = {
  code: \\"function foo(){var bar=[4,5];var baz=[1].concat([2,3],bar);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f() {
    var bar = [4, 5];
    var baz = [1].concat([2, 3], bar);
  };

  _f._closure = {};
  _f.__initData = _worklet_8509370056349_init_data;
  _f.__workletHash = 8509370056349;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for function arguments 1`] = `
"var _worklet_14198358014380_init_data = {
  code: \\"function foo(){for(var _len=arguments.length,args=new Array(_len),_key=0;_key<_len;_key++){args[_key]=arguments[_key];}console.log(args);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f() {
    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    console.log(args);
  };

  _f._closure = {};
  _f.__initData = _worklet_14198358014380_init_data;
  _f.__workletHash = 14198358014380;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for function calls 1`] = `
"var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _toConsumableArray2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/toConsumableArray\\"));

var _worklet_4972199179357_init_data = {
  code: \\"function foo(arg){const{_toConsumableArray}=this._closure;var _console;(_console=console).log.apply(_console,_toConsumableArray(arg));}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), -2, -20];

  var _f = function _f(arg) {
    var _console;

    (_console = console).log.apply(_console, (0, _toConsumableArray2.default)(arg));
  };

  _f._closure = {
    _toConsumableArray: _toConsumableArray2.default
  };
  _f.__initData = _worklet_4972199179357_init_data;
  _f.__workletHash = 4972199179357;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin transforms spread operator in worklets for objects 1`] = `
"var _worklet_8867400821792_init_data = {
  code: \\"function foo(){var bar={d:4,e:5};var baz=Object.assign({a:1},{b:2,c:3},{},bar);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f() {
    var bar = {
      d: 4,
      e: 5
    };
    var baz = Object.assign({
      a: 1
    }, {
      b: 2,
      c: 3
    }, {}, bar);
  };

  _f._closure = {};
  _f.__initData = _worklet_8867400821792_init_data;
  _f.__workletHash = 8867400821792;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes ArrowFunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: \\"function anonymous(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(x) {
    return x + 2;
  };

  _f._closure = {};
  _f.__initData = _worklet_16347365292089_init_data;
  _f.__workletHash = 16347365292089;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes FunctionDeclaration 1`] = `
"var _worklet_4679479961836_init_data = {
  code: \\"function foo(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(x) {
    return x + 2;
  };

  _f._closure = {};
  _f.__initData = _worklet_4679479961836_init_data;
  _f.__workletHash = 4679479961836;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes getter 1`] = `
"var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _classCallCheck2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/classCallCheck\\"));

var _createClass2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/createClass\\"));

var _worklet_10436985806815_init_data = {
  code: \\"function get(){const{x}=this._closure;return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }

  (0, _createClass2.default)(Foo, [{
    key: \\"bar\\",
    get: function () {
      var _e = [new Error(), -2, -20];

      var _f = function _f() {
        return x + 2;
      };

      _f._closure = {
        x: x
      };
      _f.__initData = _worklet_10436985806815_init_data;
      _f.__workletHash = 10436985806815;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin workletizes hook wrapped ArrowFunctionExpression automatically 1`] = `
"var _worklet_9645206935615_init_data = {
  code: \\"function anonymous(){return{width:50};}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
var animatedStyle = useAnimatedStyle(function () {
  const _e = [new Error(), 1, -20];

  const _f = function () {
    return {
      width: 50
    };
  };

  _f._closure = {};
  _f.__initData = _worklet_9645206935615_init_data;
  _f.__workletHash = 9645206935615;
  _f.__stackDetails = _e;
  return _f;
}());"
`;

exports[`babel plugin workletizes hook wrapped named FunctionExpression automatically 1`] = `
"var _worklet_6275510763626_init_data = {
  code: \\"function foo(){return{width:50};}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
var animatedStyle = useAnimatedStyle(function () {
  const _e = [new Error(), 1, -20];

  const _f = function () {
    return {
      width: 50
    };
  };

  _f._closure = {};
  _f.__initData = _worklet_6275510763626_init_data;
  _f.__workletHash = 6275510763626;
  _f.__stackDetails = _e;
  return _f;
}());"
`;

exports[`babel plugin workletizes hook wrapped unnamed FunctionExpression automatically 1`] = `
"var _worklet_9645206935615_init_data = {
  code: \\"function anonymous(){return{width:50};}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
var animatedStyle = useAnimatedStyle(function () {
  const _e = [new Error(), 1, -20];

  const _f = function () {
    return {
      width: 50
    };
  };

  _f._closure = {};
  _f.__initData = _worklet_9645206935615_init_data;
  _f.__workletHash = 9645206935615;
  _f.__stackDetails = _e;
  return _f;
}());"
`;

exports[`babel plugin workletizes instance method 1`] = `
"var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _classCallCheck2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/classCallCheck\\"));

var _createClass2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/createClass\\"));

var _worklet_16974800582491_init_data = {
  code: \\"function bar(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }

  (0, _createClass2.default)(Foo, [{
    key: \\"bar\\",
    value: function () {
      var _e = [new Error(), 1, -20];

      var _f = function _f(x) {
        return x + 2;
      };

      _f._closure = {};
      _f.__initData = _worklet_16974800582491_init_data;
      _f.__workletHash = 16974800582491;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin workletizes named FunctionExpression 1`] = `
"var _worklet_4679479961836_init_data = {
  code: \\"function foo(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(x) {
    return x + 2;
  };

  _f._closure = {};
  _f.__initData = _worklet_4679479961836_init_data;
  _f.__workletHash = 4679479961836;
  _f.__stackDetails = _e;
  return _f;
}();"
`;

exports[`babel plugin workletizes object hook wrapped ArrowFunctionExpression automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: \\"function onStart(event){console.log(event);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
useAnimatedGestureHandler({
  onStart: function () {
    const _e = [new Error(), 1, -20];

    const _f = function (event) {
      console.log(event);
    };

    _f._closure = {};
    _f.__initData = _worklet_338158776260_init_data;
    _f.__workletHash = 338158776260;
    _f.__stackDetails = _e;
    return _f;
  }()
});"
`;

exports[`babel plugin workletizes object hook wrapped ObjectMethod automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: \\"function onStart(event){console.log(event);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
useAnimatedGestureHandler({
  onStart: function () {
    const _e = [new Error(), 1, -20];

    const _f = function (event) {
      console.log(event);
    };

    _f._closure = {};
    _f.__initData = _worklet_338158776260_init_data;
    _f.__workletHash = 338158776260;
    _f.__stackDetails = _e;
    return _f;
  }()
});"
`;

exports[`babel plugin workletizes object hook wrapped named FunctionExpression automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: \\"function onStart(event){console.log(event);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
useAnimatedGestureHandler({
  onStart: function () {
    const _e = [new Error(), 1, -20];

    const _f = function (event) {
      console.log(event);
    };

    _f._closure = {};
    _f.__initData = _worklet_338158776260_init_data;
    _f.__workletHash = 338158776260;
    _f.__stackDetails = _e;
    return _f;
  }()
});"
`;

exports[`babel plugin workletizes object hook wrapped unnamed FunctionExpression automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: \\"function onStart(event){console.log(event);}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
useAnimatedGestureHandler({
  onStart: function () {
    const _e = [new Error(), 1, -20];

    const _f = function (event) {
      console.log(event);
    };

    _f._closure = {};
    _f.__initData = _worklet_338158776260_init_data;
    _f.__workletHash = 338158776260;
    _f.__stackDetails = _e;
    return _f;
  }()
});"
`;

exports[`babel plugin workletizes possibly chained gesture object callback functions automatically 1`] = `
"var _reactNativeGestureHandler = require(\\"react-native-gesture-handler\\");

var _worklet_15393478329680_init_data = {
  code: \\"function anonymous(){console.log('onBegin');}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
var _worklet_12748187344900_init_data = {
  code: \\"function anonymous(_event){console.log('onStart');}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};
var _worklet_232586479291_init_data = {
  code: \\"function anonymous(_event,_success){console.log('onEnd');}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = _reactNativeGestureHandler.Gesture.Tap().numberOfTaps(2).onBegin(function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f() {
    console.log('onBegin');
  };

  _f._closure = {};
  _f.__initData = _worklet_15393478329680_init_data;
  _f.__workletHash = 15393478329680;
  _f.__stackDetails = _e;
  return _f;
}()).onStart(function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(_event) {
    console.log('onStart');
  };

  _f._closure = {};
  _f.__initData = _worklet_12748187344900_init_data;
  _f.__workletHash = 12748187344900;
  _f.__stackDetails = _e;
  return _f;
}()).onEnd(function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(_event, _success) {
    console.log('onEnd');
  };

  _f._closure = {};
  _f.__initData = _worklet_232586479291_init_data;
  _f.__workletHash = 232586479291;
  _f.__stackDetails = _e;
  return _f;
}());"
`;

exports[`babel plugin workletizes static method 1`] = `
"var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _classCallCheck2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/classCallCheck\\"));

var _createClass2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/createClass\\"));

var _worklet_16974800582491_init_data = {
  code: \\"function bar(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }

  (0, _createClass2.default)(Foo, null, [{
    key: \\"bar\\",
    value: function () {
      var _e = [new Error(), 1, -20];

      var _f = function _f(x) {
        return x + 2;
      };

      _f._closure = {};
      _f.__initData = _worklet_16974800582491_init_data;
      _f.__workletHash = 16974800582491;
      _f.__stackDetails = _e;
      return _f;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin workletizes unnamed FunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: \\"function anonymous(x){return x+2;}\\",
  location: \\"${ process.cwd() }/jest tests fixture\\"
};

var foo = function () {
  var _e = [new Error(), 1, -20];

  var _f = function _f(x) {
    return x + 2;
  };

  _f._closure = {};
  _f.__initData = _worklet_16347365292089_init_data;
  _f.__workletHash = 16347365292089;
  _f.__stackDetails = _e;
  return _f;
}();"
`;
